# minqlxtism

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  commands.c  common.h  dllmain.c  hooks.c  maps_parser.c  maps_parser.h  misc.c  patches.c  patches.h  patterns.h  pyminqlxtended.h  pyminqlxtism.h  python_dispatchers.c  python_embed.c  quake_common.h  rust-toolchain.toml  simple_hook.c  trampoline.c  trampoline.h
.github/workflows/: build.yml
python/: version.py
python/minqlx/: _game.py  _player.py  database.py
python/minqlxtended/: __init__.py  _commands.py  _core.py  _events.py  _handlers.py  _player.py  _plugin.py  _zmq.py  database.py
python/minqlxtism/: __init__.py  _commands.py  _core.py  _events.py  _game.py  _handlers.py  _player.py  _plugin.py  _zmq.py  database.py
src/: commands.rs  common.rs  hooks.rs  lib.rs  patterns.rs  quake.rs  utils.rs
