[package]
name = "minqlxtism"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.3.1"
patternscan = "1.2"
libc = "0.2"
once_cell = "1.19"
lazy_static = "1.4"
ctor = "0.2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0